@@ -480,7 +480,7 @@ sub xst_file_run
   &xst_report_leave ();
 
   # As documented in perlfunc, divide by 256.
-  return (system ("$command > /dev/null 2> /dev/null") / 256);
+  return (system ("PATH=$PATH:/sbin:/usr/sbin $command > /dev/null 2> /dev/null") / 256);
 }
 
 
