@@ -315,6 +315,20 @@ sub filter
   &xml_print ($hash);
 }
 
+sub enable_iface
+{
+    my ($tool, $iface, $enabled) = @_;
+    my (%dist_attrib, $iface_set);
+    my %hash = ("file" => $iface);
+    
+    %dist_attrib = &xst_network_get_interface_replace_table ();
+    $iface_set = $dist_attrib{"iface_set"};
+    &$iface_set (\%hash, undef, $enabled, 1);
+    # Don't forget to do xst_end when the reports are over!
+    &xst_end ();
+    # XML output would come here, but this directive returns no XML.
+}
+
 
 # --- Main --- #
 
@@ -322,9 +336,12 @@ sub filter
 # Read general.pl.in:xst_run_directive to know about the format of this hash.
 
 $directives = {
-  "get"    => [ \&get,    [], "" ],
-  "set"    => [ \&set,    [], "" ],
-  "filter" => [ \&filter, [], "" ]
+  "get"          => [ \&get,          [], "" ],
+  "set"          => [ \&set,          [], "" ],
+  "filter"       => [ \&filter,       [], "" ],
+  "enable_iface" => [ \&enable_iface, [ "interface", "enabled" ],
+                     "Immediatly enable or disable a given interface.\n" .
+                     "interface is the file tag value, enabled is 1 or 0." ]
     };
 
 $tool = &xst_init ($name, $version, $description, $directives, @ARGV);
